fix: reset letter-spacing for icons

--- a/src/icons/icons.scss
+++ b/src/icons/icons.scss
@@ -19,6 +19,7 @@ $--base-path: '..' !default;
   font-variant: normal;
   line-height: 1;
   text-transform: none;
+  letter-spacing: 0;
   vertical-align: baseline;
   speak: none;
 
